수강생 상태를 관리

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    //implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
     // log4jdbc
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     // Swagger-ui
